force-app/main/default/objects/Dialpad_SMS_Event__c/Dialpad_SMS_Event__c.object-meta.xml
<CustomObject>
    <label>Dialpad SMS Event</label>
    <nameField>
        <displayFormat>SMS-{0}</displayFormat>
        <label>Dialpad_SMS_Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dialpad SMS Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>