force-app/main/default/objects/Dialpad_SMS_Event__c/fields/contact_email__c.field-meta.xml
<CustomField>
    <fullName>contact_email__c</fullName>
    <label>contact_email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>