force-app/main/default/objects/Dialpad_SMS_Event__c/fields/contact_id__c.field-meta.xml
<CustomField>
    <fullName>contact_id__c</fullName>
    <label>contact_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>