force-app/main/default/objects/Dialpad_SMS_Event__c/fields/contact_name__c.field-meta.xml
<CustomField>
    <fullName>contact_name__c</fullName>
    <label>contact_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>