force-app/main/default/objects/Dialpad_SMS_Event__c/fields/contact_phone__c.field-meta.xml
<CustomField>
    <fullName>contact_phone__c</fullName>
    <label>contact_phone</label>
    <type>Phone</type>
</CustomField>