force-app/main/default/objects/Dialpad_SMS_Event__c/fields/contact_type__c.field-meta.xml
<CustomField>
    <fullName>contact_type__c</fullName>
    <label>contact_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>