force-app/main/default/objects/Dialpad_SMS_Event__c/fields/created_date__c.field-meta.xml
<CustomField>
    <fullName>created_date__c</fullName>
    <label>created_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>