force-app/main/default/objects/Dialpad_SMS_Event__c/fields/direction__c.field-meta.xml
<CustomField>
    <fullName>direction__c</fullName>
    <label>direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>