force-app/main/default/objects/Dialpad_SMS_Event__c/fields/event_timestamp__c.field-meta.xml
<CustomField>
    <fullName>event_timestamp__c</fullName>
    <label>event_timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>