force-app/main/default/objects/Dialpad_SMS_Event__c/fields/from_number__c.field-meta.xml
<CustomField>
    <fullName>from_number__c</fullName>
    <label>from_number</label>
    <type>Phone</type>
</CustomField>