force-app/main/default/objects/Dialpad_SMS_Event__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>dialpad_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>