force-app/main/default/objects/Dialpad_SMS_Event__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Dialpad SMS Events</relationshipLabel>
    <relationshipName>Dialpad_SMS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>