force-app/main/default/objects/Dialpad_SMS_Event__c/fields/is_internal__c.field-meta.xml
<CustomField>
    <fullName>is_internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_internal</label>
    <type>Checkbox</type>
</CustomField>