force-app/main/default/objects/Dialpad_SMS_Event__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Dialpad SMS Events</relationshipLabel>
    <relationshipName>Dialpad_SMS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>