force-app/main/default/objects/Dialpad_SMS_Event__c/fields/message_delivery_result__c.field-meta.xml
<CustomField>
    <fullName>message_delivery_result__c</fullName>
    <label>message_delivery_result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>