force-app/main/default/objects/Dialpad_SMS_Event__c/fields/message_status__c.field-meta.xml
<CustomField>
    <fullName>message_status__c</fullName>
    <label>message_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>