force-app/main/default/objects/Dialpad_SMS_Event__c/fields/mms__c.field-meta.xml
<CustomField>
    <fullName>mms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mms</label>
    <type>Checkbox</type>
</CustomField>