force-app/main/default/objects/Dialpad_SMS_Event__c/fields/mms_url__c.field-meta.xml
<CustomField>
    <fullName>mms_url__c</fullName>
    <label>mms_url</label>
    <type>Url</type>
</CustomField>