force-app/main/default/objects/Dialpad_SMS_Event__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dialpad SMS Events</relationshipLabel>
    <relationshipName>Dialpad_SMS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>