force-app/main/default/objects/Dialpad_SMS_Event__c/fields/Previous_Message__c.field-meta.xml
<CustomField>
    <fullName>Previous_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The messages that was create before this one and is used to set relationship fields</description>
    <inlineHelpText>The messages that was create before this one and is used to set relationship fields</inlineHelpText>
    <label>Previous Message</label>
    <referenceTo>Dialpad_SMS_Event__c</referenceTo>
    <relationshipLabel>Dialpad SMS Events</relationshipLabel>
    <relationshipName>Dialpad_SMS_Events</relationshipName>
    <type>Lookup</type>
</CustomField>