force-app/main/default/objects/Dialpad_SMS_Event__c/fields/raw_body__c.field-meta.xml
<CustomField>
    <fullName>raw_body__c</fullName>
    <label>raw_body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>