force-app/main/default/objects/Dialpad_SMS_Event__c/fields/sender_id__c.field-meta.xml
<CustomField>
    <fullName>sender_id__c</fullName>
    <label>sender_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>