force-app/main/default/objects/Dialpad_SMS_Event__c/fields/target_email__c.field-meta.xml
<CustomField>
    <fullName>target_email__c</fullName>
    <label>target_email</label>
    <type>Email</type>
</CustomField>