force-app/main/default/objects/Dialpad_SMS_Event__c/fields/target_id__c.field-meta.xml
<CustomField>
    <fullName>target_id__c</fullName>
    <label>target_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>