force-app/main/default/objects/Dialpad_SMS_Event__c/fields/target_name__c.field-meta.xml
<CustomField>
    <fullName>target_name__c</fullName>
    <label>target_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>