force-app/main/default/objects/Dialpad_SMS_Event__c/fields/target_phone__c.field-meta.xml
<CustomField>
    <fullName>target_phone__c</fullName>
    <label>target_phone</label>
    <type>Phone</type>
</CustomField>