force-app/main/default/objects/Dialpad_SMS_Event__c/fields/target_phone_number__c.field-meta.xml
<CustomField>
    <fullName>target_phone_number__c</fullName>
    <label>target_phone_number</label>
    <type>Phone</type>
</CustomField>