force-app/main/default/objects/Dialpad_SMS_Event__c/fields/target_type__c.field-meta.xml
<CustomField>
    <fullName>target_type__c</fullName>
    <label>target_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>