force-app/main/default/objects/Dialpad_SMS_Event__c/fields/text__c.field-meta.xml
<CustomField>
    <fullName>text__c</fullName>
    <label>text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>