force-app/main/default/objects/Dialpad_SMS_Event__c/fields/text_content__c.field-meta.xml
<CustomField>
    <fullName>text_content__c</fullName>
    <label>text_content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>