force-app/main/default/objects/Dialpad_SMS_Event__c/fields/to_number__c.field-meta.xml
<CustomField>
    <fullName>to_number__c</fullName>
    <label>to_number</label>
    <type>Phone</type>
</CustomField>