force-app/main/default/objects/Dialpad_SMS_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>id__c</columns>
    <columns>created_date__c</columns>
    <columns>direction__c</columns>
    <columns>event_timestamp__c</columns>
    <columns>target_id__c</columns>
    <columns>target_type__c</columns>
    <columns>target_email__c</columns>
    <columns>target_phone__c</columns>
    <columns>target_phone_number__c</columns>
    <columns>target_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>